# qvgl

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: ci.yml
cmake/: qvgl_runtime.cmake
docs/: 01-overview.md  02-architecture.md  03-repository-layout.md  04-ir-schema.md  05-testing-and-preview.md  06-integration-shell.md  07-proof-of-correctness.md  08-upstream-examples.md  09-roadmap.md  11-qml-conformance-matrix.md  12-runtime-data-plane.md  13-sprint-roadmap.md  14-qt-for-mcu-parity-sprint.md  README.md  benchmarks.md  trim-checklist.md
examples/: README.md
examples/arc_animated/: arc_animated.qml
examples/bound_label/: bound_label.qml
examples/bound_props_card/: bound_props_card.qml
examples/channel_plot_trim/: channel_plot_trim.qml  channel_plot_trim_qt.qml
examples/cluster_dual_gauge/: README.md  can_demo.yaml  cluster_dual_gauge.qml  vehicle_bindings.yaml
examples/cluster_dual_gauge/golden/: cluster_dual_gauge.qvglir.json
examples/cluster_shell/: cluster_shell.qml
examples/cluster_shell/golden/: cluster_shell.qvglir.json
examples/conformance/: emit_markers.yaml  manifest.yaml  qt_parity.yaml  reference_trim.yaml
examples/controls_card/: controls_card.qml
examples/controls_inputs/: controls_inputs.qml
examples/controls_p2/: controls_p2.qml
examples/controls_styles/: controls_styles.qml
examples/gauge_ticks/: gauge_ticks.qml
examples/gauge_ticks/golden/: gauge_ticks.qvglir.json
examples/icon_row/: icon_row.qml
examples/instrument_cluster_static/: instrument_cluster_static.qml
examples/instrument_cluster_static/golden/: instrument_cluster_static.qvglir.json
examples/line_plot_card/: line_plot_card.qml  line_plot_card_qt.qml
examples/material_card/: material_card.qml
examples/mcu_minimal/: README.md  UPSTREAM.sha256  minimal.qml
examples/mcu_minimal/golden/: minimal.qvglir.json
examples/static_card/: static_card.qml
examples/themed_chip/: themed_chip.qml
examples/turbo_gauge/: README.md  turbo_gauge.qml
examples/turbo_gauge/golden/: turbo_gauge.qvglir  turbo_gauge.qvglir.json
examples/upstream/: README.md  manifest.yaml
examples/warning_telltales/: vehicle_bindings.yaml  warning_telltales.qml
include/qvgl/: ir_v1.h  qvgl_controls.h  qvgl_plot.h  qvgl_plot_lvgl.h  qvgl_runtime.h  qvgl_vehicle_model.h  qvgl_widget.h
profiles/: cluster_480x272.yaml  esp32p4_1024x600.yaml  ultralite_v1.yaml
qvglc/: __main__.py  cli.py  conformance.py  coverage.py  proof.py  run_preview.py  theme.py
qvglc/emit_lvgl/: __init__.py  arc_anim.py  arc_gauge.py  arc_scale.py  assets.py  bindings_codegen.py  colors.py  combo.py  conf.py  emit_context.py  emitter.py  errors.py  hybrid_ui.py  layout.py  line_plot.py  preview_shim.py  progress_bar.py  responsive_layout.py  slider.py  static_ui.py  widget_style.py
qvglc/ir/: __init__.py  binary.py  constants.py  expr.py  json_dump.py  json_load.py  model.py  string_pool.py  util.py  validate.py
qvglc/layout/: __init__.py  anchor_resolver.py  flex_layout.py
qvglc/lvgl_probe/: __init__.py  probe.py
qvglc/parser/: __init__.py  ast.py  errors.py  ir_builder.py  lexer.py  parser.py  sema.py  type_map.py
qvglc/profile/: __init__.py  load.py
qvglc/vehicle/: __init__.py  bundle.py  decode.py  emit_apply.py
runtime/: CMakeLists.txt  qvgl_controls.c  qvgl_plot.c  qvgl_plot_lvgl.c  qvgl_runtime.c  qvgl_vehicle_model.c  qvgl_widget.c
schema/: qvglir-v1.schema.json
tests/: CMakeLists.txt
tests/fixtures/qml/layout/: edge_anchors.qml
tests/fixtures/qml/reject/: connections.qml  function_decl.qml  js_math_call.qml  listview.qml  manifest.yaml  number_animation.qml  states.qml  unknown_import.qml  unknown_property.qml  unknown_theme_token.qml  unknown_type.qml
tests/harness/: qvgl_test.h  smoke.c
tests/preview/: CMakeLists.txt  lv_conf.h  main.c  qvgl_preview_display.c  qvgl_preview_display.h  qvgl_preview_png.c  qvgl_preview_png.h  qvgl_preview_sdl.c  qvgl_preview_sdl.h  qvgl_preview_weak_stubs.c
tests/python/: conformance_util.py  conftest.py  png_compare.py  qt_parity_render.py  qvgl_snapshot.py  test_anchor_resolver.py  test_arc_animation.py  test_arc_gauge.py  test_assets.py  test_bound_props_card.py  test_channel_plot_trim.py  test_cluster_examples.py  test_conformance_emit.py  test_conformance_manifest.py  test_controls_inputs.py  test_controls_layout.py  test_controls_p2.py  test_controls_styles.py  test_display_profile.py  test_dual_gauge.py  test_emit_turbo_gauge.py  test_gauge_ticks.py  test_hybrid_emit.py  test_hybrid_responsive_emit.py  test_input_handlers.py  test_ir_roundtrip.py  test_line_plot_card.py  test_lvgl_conf_emit.py  test_lvgl_probe.py  test_mcu_minimal.py  test_parser_ir_golden.py  test_parser_reject.py  test_proof.py  test_qt_parity_render.py  test_qvglc_run_cli.py  test_render_golden.py  test_responsive_emit.py  test_runtime_c.py  test_theme_tokens.py  test_upstream_examples.py  (+2 more)
tests/runtime/: CMakeLists.txt  main.c
tests/runtime_lvgl/: CMakeLists.txt  main.c  main_bound.c  main_controls.c  main_plot.c  main_widget.c  test_bound_setters.c  test_controls.c  test_plot.c  test_widget.c
tools/: sync_upstream_examples.sh
