add_library(qvgl_runtime STATIC qvgl_runtime.c qvgl_plot.c)
target_include_directories(qvgl_runtime PUBLIC ${CMAKE_SOURCE_DIR}/include)

add_library(qvgl_runtime_lvgl STATIC qvgl_plot_lvgl.c qvgl_widget.c)
target_include_directories(qvgl_runtime_lvgl PUBLIC ${CMAKE_SOURCE_DIR}/include)
if(QVGL_LVGL_PATH AND IS_DIRECTORY "${QVGL_LVGL_PATH}")
    target_include_directories(qvgl_runtime_lvgl PUBLIC "${QVGL_LVGL_PATH}")
    target_include_directories(qvgl_runtime_lvgl PUBLIC "${CMAKE_SOURCE_DIR}/tests/preview")
    target_compile_definitions(qvgl_runtime_lvgl PUBLIC LV_CONF_INCLUDE_SIMPLE)
else()
    message(FATAL_ERROR "QVGL_LVGL_PATH must point at LVGL (required for qvgl_runtime_lvgl)")
endif()
target_link_libraries(qvgl_runtime_lvgl PUBLIC qvgl_runtime)
